--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,23 @@
     <% include partials/header %>
 </header>
 <main>
+    <div class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <p>One fine body&hellip;</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
     <div class="row">
         <a class="btn btn-success" href="<%=contextPath%>/users/add" >
             <span class="glyphicon glyphicon-plus-sign"></span> Add User
@@ -31,10 +48,10 @@
                     <td><%=item.created_at%></td>
                     <td>
                         <div class="btn-group">
-                            <a class="btn btn-info" href="<%=contextPath%>/update/<%=item.id%>" >
+                            <a class="btn btn-info" href="<%=contextPath%>/users/update/<%=item.id%>" >
                                 <span class="glyphicon glyphicon-pencil"></span>
                             </a>
-                            <a class="btn btn-danger" href="<%=contextPath%>/delete/<%=item.id%>" >
+                            <a class="btn btn-danger" href="<%=contextPath%>/users/delete/<%=item.id%>" >
                                 <span class="glyphicon glyphicon-remove"></span>
                             </a>
                         </div>
